syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hash.proto";

package proto;

service DiscountService {
  rpc getDiscount(DiscountRequest) returns (DiscountResponse) {}
}

message Discount {
  float prc = 1;
  int32 value_in_cents = 2;
}

message DiscountRequest {
  int32 user_id = 1;
  int32 product_id = 2;
}

message DiscountResponse {
  Discount discount = 1;
}
